--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="./script.js" defer></script>
+  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="styles.css">
   <title>TAM Project Idea Generator</title>
 </head>
 
@@ -15,21 +16,23 @@
       <h1>TAM Project Idea Generator</h1>
     </header>
     <form id='form'>
-      <label>Enter the month you were born:
+      <label>Month born:
         <select id='month-select'>
         </select>
       </label>
-      <label>Enter the first letter of your first name:
+      <label><b>First</b> name starts with:
         <select id='first-name-select'>
         </select>
       </label>
-      <label>Enter the first letter of your last name:
+      <label><b>Last</b> name starts with:
         <select id='last-name-select'>
         </select>
       </label>
       <button type='submit'>Generate</button>
     </form>
-    <h2 id='result'></h2>
+    <div id="wrapper">
+      <h2 id='result'></h2>
+    </div>
   </main>
 </body>
 
